Add reflextion and multi agent tutorial

--- a/tutorial/LLM+Langchain/Week-8/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-8/notebook.ipynb
@@ -803,47 +803,107 @@
    "id": "adda8172-d8ae-4bf0-80be-14810309324a",
    "metadata": {},
    "source": [
-    "# Langgraph\n",
+    "# 🧩 LangGraph 框架與計劃-行動代理人簡介\n",
     "\n",
-    "在現代 LLM 應用開發中，**LangChain** 和 **LangGraph** 是兩個常被提及的工具，它們皆旨在簡化與大型語言模型的整合流程，但各自的設計理念和使用場景略有不同。\n",
+    "## 一、LangGraph 是什麼？\n",
     "\n",
-    "## LangChain vs. LangGraph 比較\n",
+    "**LangGraph** 是一個專門為構建 **多智能體系統（Multi-Agent Systems）** 而設計的框架，提供了結構化的方式來設計、協調與管理多個智能體之間的互動。  \n",
+    "它建立在 **LangChain** 的概念之上，並引入了「圖（Graph）」的思維模型：  \n",
+    "每個智能體（Agent）被視為圖中的一個節點（Node），節點之間的邊（Edge）代表任務流或資訊交換的關係。\n",
+    "\n",
+    "### 🌟 LangGraph 的核心特點\n",
+    "\n",
+    "- 🔗 **節點導向設計**：每個節點可代表一個智能體、工具或決策模組。  \n",
+    "- 🔄 **靈活的任務流程**：支援有條件的任務轉移（例如根據上下文或任務狀態動態選擇不同智能體）。  \n",
+    "- 🧠 **模型互補性**：可同時使用多種大型語言模型（LLMs）或不同的外部工具。  \n",
+    "- 📊 **可視化工作流**：開發者可以直觀地觀察智能體之間的互動與任務流向。  \n",
+    "- 🧩 **有狀態的任務控制**：支援任務回溯、重試與流程中斷恢復等功能。  \n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 二、LangChain vs. LangGraph\n",
+    "\n",
+    "在現代 LLM 應用開發中，**LangChain** 和 **LangGraph** 是兩個常被提及的框架。  \n",
+    "它們皆旨在簡化與大型語言模型的整合流程，但在設計理念與使用場景上有所不同。\n",
     "\n",
     "| 特點 | LangChain | LangGraph |\n",
     "|------|-----------|-----------|\n",
     "| 架構風格 | 函式導向（Function-based） | 圖形導向（Graph-based） |\n",
-    "| 核心用途 | 組合不同的工具與鏈（Chains）來處理自然語言任務 | 定義狀態轉換與流程控制的狀態機 |\n",
-    "| 適合場景 | 線性流程、多工具串接、Agent任務 | 有狀態的工作流程、多步驟決策、動態流程 |\n",
-    "| 控制流程能力 | 較弱，需透過程式邏輯控制 | 較強，內建狀態管理與動態流程切換 |\n",
-    "| 易學程度 | 相對容易上手 | 初期需要理解狀態機模型 |\n",
-    "| 通用性 | 通用性強、模組多 | 更適合複雜與長期任務管理 |\n",
+    "| 核心用途 | 組合不同的工具與鏈（Chains）以處理任務 | 定義狀態轉換與流程控制的狀態機 |\n",
+    "| 適合場景 | 線性流程、多工具串接、單一任務代理人 | 有狀態的工作流程、多步驟決策、動態流程切換 |\n",
+    "| 控制流程能力 | 較弱，需透過程式邏輯控制 | 較強，內建狀態管理與動態節點切換 |\n",
+    "| 易學程度 | 相對容易上手 | 初期需理解狀態機與圖結構概念 |\n",
+    "| 通用性 | 模組多、通用性強 | 更適合複雜與長期任務管理 |\n",
     "\n",
-    "## 為什麼選擇 LangGraph？\n",
-    "\n",
-    "LangGraph 建立在 LangChain 的基礎上，但提供了更明確的流程控制能力。透過「有向圖」的方式定義節點（Node）與狀態轉移（Edge），開發者可以更容易地設計出具備**記憶狀態**、**可回溯性**、**動態流程切換**的 LLM 應用。\n",
-    "\n",
-    "簡而言之，**LangChain** 更像是設計工具組合的「積木箱」，而 **LangGraph** 則是設計流程和邏輯的「流程編輯器」。\n",
+    "> 💡 **簡而言之**：  \n",
+    "> - **LangChain** 像是一個「積木箱」，提供各種模組供你自由組合。  \n",
+    "> - **LangGraph** 則像是一個「流程編輯器」，讓你清楚定義任務節點與流程邏輯。\n",
     "\n",
     "---\n",
     "\n",
-    "接下來，我們將透過實作一個 **計劃-行動代理人（Plan-Action Agent）** 的例子，深入探索 LangGraph 的設計理念與強大功能。\n",
+    "## 三、為什麼選擇 LangGraph？\n",
+    "\n",
+    "LangGraph 建立在 LangChain 的基礎上，但提供了更明確的 **流程控制能力**。  \n",
+    "透過「有向圖（Directed Graph）」定義節點（Node）與狀態轉移（Edge），開發者可以輕鬆設計出具備以下特性的 LLM 應用：\n",
+    "\n",
+    "- ✅ **記憶狀態（Stateful）**：能保存上下文與任務進度。  \n",
+    "- 🔁 **可回溯（Reversible）**：支援任務失敗時的重試與回溯。  \n",
+    "- ⚡ **動態流程（Dynamic Flow）**：根據結果或上下文動態切換下一步節點。  \n",
+    "- 🧩 **多智能體協作（Multi-Agent Coordination）**：支援多個智能體協同工作。  \n",
+    "\n",
+    "這使得 LangGraph 特別適合需要長期規劃、決策、以及多階段任務的應用場景，例如：\n",
+    "- AI 助理工作流程管理  \n",
+    "- 自動化決策系統  \n",
+    "- 複雜任務規劃與執行（如科研助理、專案管理代理人）\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 四、計劃-行動代理人（Plan-Action Agent）\n",
+    "\n",
+    "### 🔍 什麼是計劃-行動代理人？\n",
+    "\n",
+    "計劃-行動代理人是一種基於「**計劃（Plan）** → **行動（Action）** → **反饋（Feedback）**」迭代循環的智能體。  \n",
+    "它會根據環境狀況生成計劃，並逐步執行與調整，直到達成目標。\n",
+    "\n",
+    "典型的工作流程如下：\n",
+    "\n",
+    "1. **觀察環境**：收集當前環境狀態或上下文。  \n",
+    "2. **計劃生成**：根據觀察結果生成一系列行動計劃。  \n",
+    "3. **行動執行**：逐步執行每個計劃步驟。  \n",
+    "4. **反饋與調整**：根據執行結果與環境變化調整計劃，確保最終目標的達成。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 五、在 LangGraph 中實現計劃-行動代理人\n",
+    "\n",
+    "LangGraph 為構建這類代理人提供了理想的結構。  \n",
+    "在 LangGraph 中，我們可以透過「節點」定義不同的智能體角色（如計劃生成器、執行者、監督者），並以「邊」定義他們之間的互動流程。\n",
+    "\n",
+    "例如：\n",
+    "\n",
+    "[觀察節點] → [計劃生成節點] → [行動執行節點] → [反饋節點]\n",
+    "\n",
+    "↘———————————————↗（根據反饋動態回到計劃生成）\n",
     "\n",
     "\n",
-    "## 什麼是計劃-行動代理人？\n",
+    "這樣的設計允許代理人在任務執行中進行：\n",
+    "- 任務重試（retry）  \n",
+    "- 動態決策（dynamic routing）  \n",
+    "- 自適應策略調整（adaptive planning）  \n",
     "\n",
-    "計劃-行動代理人（Plan-Action Agent）是智能體的一種，它依賴於計劃生成和行動執行來達成目標。簡單來說，這種代理人會首先根據當前情況建立一個行動計劃，然後根據計劃逐步執行各項任務，直到達成預定的目標。\n",
+    "---\n",
     "\n",
-    "計劃-行動代理人的工作流程通常包含以下幾個步驟：\n",
-    "1. **觀察環境**：代理人會先收集當前的環境狀態信息。\n",
-    "2. **計劃生成**：根據當前狀況，代理人會生成一個包含一系列行動的計劃。\n",
-    "3. **行動執行**：代理人按照計劃中的步驟逐一執行，並在必要時調整計劃。\n",
-    "4. **反饋與調整**：根據執行結果和環境變化，代理人會更新計劃，確保最終目標的達成。\n",
+    "## 六、接下來的內容\n",
     "\n",
-    "## Langgraph 中的計劃-行動代理人\n",
+    "接下來，我們將透過實作一個 **計劃-行動代理人（Plan-Action Agent）** 的範例，  \n",
+    "展示如何使用 LangGraph 來：\n",
     "\n",
-    "Langgraph 是一個強大的框架，它允許我們定義和實現多種形式的智能代理系統。在 Langgraph 中，計劃-行動代理人通常會利用圖論和計劃生成算法來選擇最佳的行動方案。通過簡單的接口和模塊化設計，Langgraph 使得構建和訓練這類代理人變得更加高效且可擴展。\n",
+    "- 定義多個智能體節點  \n",
+    "- 設計任務流程與條件轉移  \n",
+    "- 管理狀態與任務回溯  \n",
     "\n",
-    "在接下來的教程中，我們將展示如何使用 Langgraph 構建和訓練一個計劃-行動代理人，並通過一些實際範例來說明其應用場景。"
+    "透過這個實作，你將能理解 LangGraph 在 **多智能體協作**、**動態決策** 與 **有狀態任務控制** 方面的強大能力。\n"
    ]
   },
   {
@@ -960,18 +1020,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# class Response(BaseModel):\n",
-    "#     \"\"\"Response to user.\"\"\"\n",
-    "#     type: Literal[\"response\"] = \"response\"\n",
-    "#     response: str = Field(descirption=\"The answer to the objective\")\n",
-    "\n",
-    "\n",
-    "# class Act(BaseModel):\n",
-    "#     \"\"\"Action to Perform.\"\"\"\n",
-    "\n",
-    "#     response = Optional[str] = Field(None, description=\"Direct response to the user.\")\n",
-    "#     steps = Optional[List[str]] = Field(None, description=\"Plan steps to follow, in sorted order\")\n",
-    "\n",
     "class Response(BaseModel):\n",
     "    \"\"\"Response to user.\"\"\"\n",
     "    type: Literal['response'] = 'response'\n",
@@ -990,7 +1038,7 @@
     "    )\n",
     "\n",
     "replanner_prompt = ChatPromptTemplate.from_template(\n",
-    "    dedet(\"\"\"For the given objective, come up with a simple step by step plan. \\\n",
+    "    dedent(\"\"\"For the given objective, come up with a simple step by step plan. \\\n",
     "This plan should involve individual tasks, that if executed correctly will yield the correct answer. Do not add any superfluous steps. \\\n",
     "The result of the final step should be the final answer. Make sure that each step has all the information needed - do not skip steps.\n",
     "\n",
@@ -1030,27 +1078,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install langgraph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7eddea48-2237-45cc-afb6-b6a825df4cc3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_parser = PydanticOutputParser(pydantic_object=Inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f6bd8da-c262-4da6-b566-6a62adb0e089",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(input_parser.get_format_instructions())"
+    "# !pip install langgraph"
    ]
   },
   {
@@ -1193,22 +1221,68 @@
     "from langchain.agents import AgentExecutor, create_react_agent\n",
     "# from langgraph.prebuilt import create_react_agent\n",
     "\n",
-    "\n",
     "tools = [SearchTool()]\n",
     "agent_model = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n",
     "                   model_name=\"gpt-4o\", temperature=0)\n",
     "\n",
-    "\n",
     "# Choose the LLM that will drive the agent\n",
     "zero_shot_agent = create_react_agent(llm=agent_model, tools=tools, prompt=agent_prompt_template)\n",
-    "agent_executor = AgentExecutor(agent=zero_shot_agent, tools=tools, verbose=True)\n",
-    "\n",
+    "agent_executor = AgentExecutor(agent=zero_shot_agent, tools=tools, verbose=True, handle_parsing_errors=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8e7f912-1194-4f19-9520-def70d4aa36c",
+   "metadata": {},
+   "source": [
+    "### Define the functionalities of the nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "916a8892-d9a6-429f-9f39-4023457db696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "async def execute_step(state: PlanExecute):\n",
+    "    \"\"\"\n",
+    "    此方法負責執行目前計劃（plan）中的第一個步驟。\n",
+    "    在 LangGraph 節點中，它通常作為「任務執行節點」，負責根據計劃指令呼叫代理模型（agent）來執行具體任務，並將執行結果記錄到狀態（state）中。\n",
+    "    \n",
+    "    主要邏輯：\n",
+    "    \n",
+    "    從 state 讀取目前的計劃 (plan)。\n",
+    "    \n",
+    "    以編號方式將整個計劃格式化成可讀字串。\n",
+    "    \n",
+    "    取出計劃中的第一個步驟作為要執行的任務。\n",
+    "    \n",
+    "    呼叫 agent_executor.ainvoke()，讓智能代理執行該任務。\n",
+    "    \n",
+    "    將執行結果與任務名稱以 tuple 形式存入 past_steps。\n",
+    "    \n",
+    "    若 state 中尚無過去紀錄，建立新的 past_steps；否則將新結果附加到現有紀錄中。\n",
+    "    \n",
+    "    參數：\n",
+    "    \n",
+    "    state (PlanExecute)：包含計劃、過往步驟與當前輸入的執行狀態。\n",
+    "    \n",
+    "    回傳：\n",
+    "    \n",
+    "    dict：包含更新後的 past_steps，即執行任務的歷史紀錄。\n",
+    "    \n",
+    "    應用情境：\n",
+    "    此節點可用於多步驟任務執行流程，例如：\n",
+    "    \n",
+    "    根據計劃逐步執行動作（如資料蒐集、分析、報告撰寫等）。\n",
+    "    \n",
+    "    在多代理系統中由特定 agent 執行分配任務。\n",
+    "    \"\"\"\n",
     "    plan = state[\"plan\"]\n",
     "    plan_str = \"\\n\".join(f\"{i + 1}. {step}\" for i, step in enumerate(plan))\n",
     "    task = plan[0]\n",
-    "    task_formatted = f\"\"\"For the following plan:\n",
-    "{plan_str}\\n\\nYou are tasked with executing step {1}, {task}.\"\"\"\n",
+    "    task_formatted = f\"\"\"For the following plan:{plan_str}\\n\\nYou are tasked with executing step {1}, {task}.\"\"\"\n",
     "    \n",
     "    agent_response = await agent_executor.ainvoke(\n",
     "        {\"input\": task_formatted}\n",
@@ -1219,33 +1293,150 @@
     "    if \"past_steps\" not in state:\n",
     "        return {\"past_steps\": current_step}\n",
     "    else:\n",
-    "        return {\"past_steps\": state[\"past_steps\"] + current_step}\n",
-    "\n",
-    "\n",
+    "        return {\"past_steps\": state[\"past_steps\"] + current_step}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45b1399c-c278-4e57-92eb-a628e8a31e38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "async def plan_step(state: PlanExecute):\n",
+    "    \"\"\"\n",
+    "    此方法負責根據使用者輸入建立完整的計劃（plan）。\n",
+    "    在 LangGraph 節點中，它通常作為「計劃生成節點」，讓規劃器（planner）根據使用者指令產生一系列可執行步驟。\n",
+    "    \n",
+    "    主要邏輯：\n",
+    "    \n",
+    "    呼叫 planner.ainvoke()，將使用者輸入的訊息傳入規劃模型。\n",
+    "    \n",
+    "    接收規劃器輸出的步驟（plan.steps）。\n",
+    "    \n",
+    "    將這些步驟存入 state，以便後續節點執行。\n",
+    "    \n",
+    "    參數：\n",
+    "    \n",
+    "    state (PlanExecute)：包含使用者輸入的執行狀態（state[\"input\"] 為用戶的主要指令）。\n",
+    "    \n",
+    "    回傳：\n",
+    "    \n",
+    "    dict：包含一個鍵值對 { \"plan\": plan.steps }，即模型生成的任務步驟清單。\n",
+    "    \n",
+    "    應用情境：\n",
+    "    此節點可用於任務導向系統的開頭階段，例如：\n",
+    "    \n",
+    "    將「撰寫市場報告」分解為「資料蒐集 → 整理 → 分析 → 撰寫」。\n",
+    "    \n",
+    "    在多階段推理或自動化任務中生成具體工作計劃。\n",
+    "    \"\"\"\n",
+    "    \n",
     "    plan = await planner.ainvoke({\"messages\": [(\"user\", state[\"input\"])]})\n",
-    "    return {\"plan\": plan.steps}\n",
-    "\n",
-    "\n",
+    "    return {\"plan\": plan.steps}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "597949a2-3dd0-473d-b33b-9e0556bad85f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "async def replan_step(state: PlanExecute):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    此方法負責在任務執行過程中進行動態重新規劃（Replanning）。\n",
+    "    當代理執行中遇到問題、條件改變或4任務未完成時，該節點可呼叫「再規劃器」（replanner）生成新的計劃或直接輸出最終回應。\n",
+    "    \n",
+    "    主要邏輯：\n",
+    "    \n",
+    "    呼叫 replanner.ainvoke()，將當前執行狀態作為輸入。\n",
+    "    \n",
+    "    若返回結果包含 Response 類型的動作，表示可直接輸出最終回覆。\n",
+    "    \n",
+    "    若結果為新的計劃步驟，則更新 plan。\n",
+    "    \n",
+    "    若無新步驟可執行，則使用最後一次執行的結果作為回應。\n",
+    "    \n",
+    "    參數：\n",
+    "    \n",
+    "    state (PlanExecute)：包含目前的執行狀態、歷史步驟與已知計劃。\n",
+    "    \n",
+    "    回傳：\n",
+    "    \n",
+    "    dict：包含新的 plan 或最終 response。\n",
+    "    \n",
+    "    應用情境：\n",
+    "    此節點用於：\n",
+    "    \n",
+    "    執行任務時根據失敗步驟或環境變化調整計劃。\n",
+    "    \n",
+    "    讓智能體具備「自我修正」能力。\n",
+    "    \n",
+    "    在長程任務中根據中間輸出重新安排後續步驟。\n",
+    "    \"\"\"\n",
+    "    \n",
     "    output = await replanner.ainvoke(state)\n",
-    "    print(\"*************************\")\n",
-    "    print(output)\n",
-    "    print(\"*************************\")\n",
     "    if isinstance(output.action, Response):\n",
     "        return {\"response\": output.action.response}\n",
     "    else:\n",
     "        if output.action.steps:\n",
     "            return {\"plan\": output.action.steps}\n",
     "        else:\n",
-    "            return {\"response\": state['past_steps'][-1][1]}\n",
-    "\n",
-    "\n",
+    "            return {\"response\": state['past_steps'][-1][1]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "891decb3-0846-4687-bc28-73a849dbcce6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def should_end(state: PlanExecute):\n",
+    "    \"\"\"\n",
+    "    此方法負責決定工作流程是否結束。\n",
+    "    在 LangGraph 節點中，它通常是條件分支（conditional edge）的判斷邏輯，用來檢查任務是否完成或是否應該回到代理繼續執行。\n",
+    "    \n",
+    "    主要邏輯：\n",
+    "    \n",
+    "    若 state 中存在 response 且其值非空，代表任務已完成 → 回傳 END。\n",
+    "    \n",
+    "    否則，回傳 \"agent\"，表示仍需由代理節點繼續執行。\n",
+    "    \n",
+    "    參數：\n",
+    "    \n",
+    "    state (PlanExecute)：目前的執行狀態。\n",
+    "    \n",
+    "    回傳：\n",
+    "    \n",
+    "    END（任務完成，結束節點）或 \"agent\"（繼續執行下一階段）。\n",
+    "    \n",
+    "    應用情境：\n",
+    "    此節點常用於：\n",
+    "    \n",
+    "    流程控制（決定任務是否結束）。\n",
+    "    \n",
+    "    多節點 LangGraph 流程中設置終止條件。\n",
+    "    \n",
+    "    確保系統在任務完成後適時停止，不進行多餘操作。\n",
+    "    \"\"\"\n",
+    "    \n",
     "    if \"response\" in state and state[\"response\"]:\n",
     "        return END\n",
     "    else:\n",
     "        return \"agent\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab1e7ad6-5d36-4928-b96a-0a572f9b8b55",
+   "metadata": {},
+   "source": [
+    "LangGraph 是宣告式（declarative）的，而非純粹動態（purely dynamic）的。\n",
+    "這表示當你在建立工作流程圖（workflow graph）時（也就是在執行之前），LangGraph 需要事先知道所有可能的分支——\n",
+    "即使你的條件函式（should_end）會在執行階段才決定實際要走哪一個分支。"
    ]
   },
   {
@@ -1298,6 +1489,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0abd4647-a4d8-47d9-9b1c-040907d48006",
+   "metadata": {},
+   "source": [
+    "### Reserved / Special Parts of `config`\n",
+    "\n",
+    "Below are the reserved or commonly used keys in the `config` dictionary when working with **LangGraph**:\n",
+    "\n",
+    "| Key | Purpose | Example |\n",
+    "|------|----------|----------|\n",
+    "| `\"configurable\"` | ✅ **Main section for user-defined and framework config.** Used by checkpointers, node settings, etc. | `{\"configurable\": {\"thread_id\": \"abc123\"}}` |\n",
+    "| `\"checkpoint_ns\"` | **Namespace for checkpoints** (advanced use). Useful when you want to separate stored states across different workflows. | `{\"checkpoint_ns\": \"my_namespace\"}` |\n",
+    "| `\"recursion_limit\"` | **Limits graph recursion depth.** Prevents infinite loops or too-deep graph calls. | `{\"recursion_limit\": 10}` |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e79a1255-a90c-43d7-a2f8-7330fe15d71c",
@@ -1327,7 +1534,10 @@
    "id": "98a29ef6-8697-47bf-a461-aae3989d56c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "config = {\"recursion_limit\": 50}\n",
+    "inputs = {\"input\": \"富邦悍將的啦啦隊三本柱是誰?\"}"
+   ]
   },
   {
    "cell_type": "code",
@@ -1335,7 +1545,68 @@
    "id": "3c7f25ad-9e27-41d1-bdbb-f5fbcc4d6e8b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "async for event in app.astream(inputs, config=config):\n",
+    "    for k, v in event.items():\n",
+    "        if k != \"__end__\":\n",
+    "            print(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8c91039-b819-4532-ac19-413968f9a645",
+   "metadata": {},
+   "source": [
+    "## 💬 評論：LangGraph 任務執行觀察4與優化建議\n",
+    "\n",
+    "這次的最終答案是正確的——**「富邦悍將啦啦隊的三本柱為李珠珢、李雅英、南珉貞」**，結果符合事實。  \n",
+    "不過整體推理與行動過程顯得有些「笨拙」，存在明顯的優化空間。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🧠 問題觀察\n",
+    "1. **重複與低效的查詢步驟**  \n",
+    "   多次執行類似的 `websearch`，查詢關鍵字差異不大，導致系統重複獲取相近內容，浪費資源與時間。  \n",
+    "\n",
+    "2. **上下文理解不足**  \n",
+    "   當已經在前一步確定「三本柱」指的是富邦悍將的韓籍啦啦隊成員時，後續步驟仍然重新查詢「三位成員的名字」，  \n",
+    "   顯示模型沒有有效利用先前的狀態（`past_steps`）。  \n",
+    "\n",
+    "3. **行動鏈（Agent Chain）過長且缺乏判斷中止條件**  \n",
+    "   系統在應該可以結束的階段仍繼續嘗試執行查詢，最終多次出現 `\"Agent stopped due to iteration limit or time limit\"`。  \n",
+    "\n",
+    "4. **格式錯誤頻繁**  \n",
+    "   多次出現 `Invalid Format: Missing 'Action:' after 'Thought:'`，  \n",
+    "   顯示代理在產生指令時的格式化邏輯需要加強。  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ⚙️ 改進建議\n",
+    "1. **強化上下文記憶使用（State Management）**  \n",
+    "   - 在 `execute_step` 或 `replan_step` 階段中，明確讓 agent 檢查 `past_steps`，避免重複查詢相同問題。  \n",
+    "\n",
+    "2. **加入動態停止條件（Dynamic Stop Condition）**  \n",
+    "   - 若 `agent_response` 已包含高置信度的具體名稱（例如三個人名），可直接將狀態切換為 `END`，無需繼續循環。  \n",
+    "\n",
+    "3. **優化搜尋策略**  \n",
+    "   - 將多步查詢整合為單一明確查詢，例如：  \n",
+    "     「富邦悍將 啦啦隊 三本柱 2025 成員名單」，以減少噪音。  \n",
+    "\n",
+    "4. **修正輸出格式生成邏輯**  \n",
+    "   - 在 LLM Prompt Template 中，使用結構化格式（如 JSON 或 YAML）明確定義 `Thought / Action / Observation` 區塊，減少格式錯誤。  \n",
+    "\n",
+    "5. **可考慮加入 Re-Planning 判斷強化**  \n",
+    "   - 當系統偵測到重複查詢或內容無變化時，可自動觸發 `replan_step`，切換策略或直接輸出結果。  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ✅ 總結\n",
+    "整體而言，系統最終得出了正確答案，說明任務設計邏輯有效；  \n",
+    "但在過程中表現出缺乏上下文記憶、重複查詢與格式錯誤等問題。  \n",
+    "\n",
+    "若能加強狀態判斷、結果置信度評估與查詢整合，將能顯著提升效率與智能程度。\n",
+    "4"
+   ]
   }
  ],
  "metadata": {
