--- a/tutorial/LLM+Langchain/Week-8/reflection agent.ipynb
+++ b/tutorial/LLM+Langchain/Week-8/reflection agent.ipynb
@@ -230,7 +230,7 @@
    "id": "a16f9946-c26c-4354-9be3-182b16967d5e",
    "metadata": {},
    "source": [
-    "## Langgraph Pipeline"
+    "## Langgraph Workflow"
    ]
   },
   {
