--- a/tutorial/LLM+Langchain/Week-6/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-6/notebook.ipynb
@@ -313,7 +313,6 @@
     "        partial = event.delta\n",
     "        buffer += partial\n",
     "        print(\"\\r\" + buffer, end=\"\", flush=True)\n",
-    "        # print(partial, end=\"\", flush=True)\n",
     "    except AttributeError:\n",
     "        # fallback / final result\n",
     "        print(\"\\r\" + \" \" * len(buffer), end=\"\")  # 清掉這行\n",
@@ -832,14 +831,16 @@
    "id": "c7a2fed0-5cc2-4f80-9c74-19bce586df66",
    "metadata": {},
    "source": [
-    "### 直接撥放 + 串流\n",
+    "### 串流\n",
     "\n",
-    "相較於之前是先將結果存成檔案再撥放檔案，我們可以跳過儲存的步驟，這樣效率上來說更快一點\n",
+    "在整個音訊檔案還沒完全下載完畢之前，播放就已經開始了\n",
     "將格式從壓縮的mp3換成無壓縮的wav\n",
     "\n",
     "** 開源社群臥虎藏龍\n",
     "\n",
-    "https://community.openai.com/t/streaming-from-text-to-speech-api/493784/29"
+    "https://community.openai.com/t/streaming-from-text-to-speech-api/493784/29\n",
+    "\n",
+    "在整個音訊檔案還沒完全下載完畢之前，播放就已經開始了。"
    ]
   },
   {
@@ -899,12 +900,23 @@
     "}\n",
     "\n",
     "# You send the request to the API (requests.post).\n",
+    "# 這裡的 stream=True 是整個行為的關鍵。\n",
+    "#🔹 stream=True 的作用\n",
+    "\n",
+    "# 設定 stream=True 之後，requests 函式庫不會一次把整個伺服器回應內容全部下載下來。\n",
+    "# 它會回傳一個「串流的回應物件」（response.raw），\n",
+    "# 讓你可以邊接收資料、邊處理內容。\n",
+    "\n",
+    "# 因此，當 OpenAI API 開始傳送音訊資料時，\n",
+    "# 你就能立即從網路串流中讀取部分音訊，\n",
+    "# 不需要等待整個 WAV 檔案都傳完。\n",
     "response = requests.post(url, headers=headers, json=data, stream=True)\n",
     "\n",
     "CHUNK_SIZE = 1024\n",
     "\n",
     "if response.ok:\n",
-    "    # You open the response audio data with wave.open.\n",
+    "    # 這段程式中：\n",
+    "    # wave.open(response.raw, 'rb') 開啟的是一個可「邊讀邊播」的串流。\n",
     "    with wave.open(response.raw, 'rb') as wf:\n",
     "        p = pyaudio.PyAudio()\n",
     "        # You configure the PyAudio stream (p.open(...)).\n",
@@ -913,6 +925,9 @@
     "                        rate=wf.getframerate(),\n",
     "                        output=True)\n",
     "\n",
+    "        # wf.readframes(CHUNK_SIZE) 每次只讀取一小塊音訊（例如 1024 幀）。\n",
+    "        # 如果下一塊音訊還沒從伺服器傳完，它會短暫等待，然後繼續播放。\n",
+    "        # 因此，音訊一邊從伺服器傳過來，一邊就被播放出去。\n",
     "        while len(data := wf.readframes(CHUNK_SIZE)):\n",
     "            #這行負責撥放聲音\n",
     "            stream.write(data)\n",
@@ -1569,14 +1584,6 @@
     "        json={'input': {\"query\": whisper_output}}\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d21cd72b-6880-4c29-b410-e52d5bcf298d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "raw",
